--- Auto-Git Commit ---

--- a/Virtualization/Tools/测试虚拟机构建.md
+++ b/Virtualization/Tools/测试虚拟机构建.md
@@ -53,6 +53,10 @@ chmod 777 -R /data/tftpboot
 systemctl start xinetd
 systemctl status xinetd
 systemctl enable xinetd
+
+systemctl start tftp.service
+systemctl status tftp.service
+systemctl enable tftp.service
 ```
 
 查看tftp服务是否开启
