--- Auto-Git Commit ---

--- a/Virtualization/Tools/测试虚拟机构建.md
+++ b/Virtualization/Tools/测试虚拟机构建.md
@@ -29,7 +29,7 @@ service tftp
 	wait			= yes
 	user			= root
 	server			= /usr/sbin/in.tftpd
-	server_args		= -s /data/tftpboot -c
+	server_args		= -s /data/tftproot -c
 	disable			= no
 	per_source		= 11
 	cps			= 100 2
@@ -44,7 +44,7 @@ service tftp
 修改权限
 
 ```
-chmod 777 -R /data/tftpboot
+chmod 777 -R /data/tftproot
 ```
 
 启动host上tftp服务
@@ -53,10 +53,6 @@ chmod 777 -R /data/tftpboot
 systemctl start xinetd
 systemctl status xinetd
 systemctl enable xinetd
-
-systemctl start tftp.service
-systemctl status tftp.service
-systemctl enable tftp.service
 ```
 
 查看tftp服务是否开启
@@ -98,6 +94,43 @@ tftp> q
 yum install httpd -y
 systemctl start httpd
 systemctl enable httpd
+```
+
+```
+#DocumentRoot "/var/www/html"
+DocumentRoot "/data/httpdroot"
+
+
+<Directory "/data/httpdroot">
+    #
+    # Possible values for the Options directive are "None", "All",
+    # or any combination of:
+    #   Indexes Includes FollowSymLinks SymLinksifOwnerMatch ExecCGI MultiViews
+    #
+    # Note that "MultiViews" must be named *explicitly* --- "Options All"
+    # doesn't give it to you.
+    #
+    # The Options directive is both complicated and important.  Please see
+    # http://httpd.apache.org/docs/2.4/mod/core.html#options
+    # for more information.
+    #
+    #Options Indexes FollowSymLinks
+    Options All
+
+    #
+    # AllowOverride controls what directives may be placed in .htaccess files.
+    # It can be "All", "None", or any combination of the keywords:
+    #   Options FileInfo AuthConfig Limit
+    #
+    AllowOverride All
+
+    #
+    # Controls who can get stuff from this server.
+    #
+    Order allow,deny
+    Allow from all
+    Require all granted
+</Directory>
 ```
 
 目录是`/var/www/html/`
