--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/3. cgroups V2.md
+++ b/Linux/cgroup/简要介绍/3. cgroups V2.md
@@ -1,4 +1,3 @@
-
 <!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
 <!-- code_chunk_output -->
@@ -98,27 +97,27 @@ cgroup_no_v1=all      # all 将所有的controller设置为对cgroup v1不可用
 
 当前 cgroup v2 支持以下 controller:
 
-* `io`
+* io
 
 >since Linux 4.5, cgroup v1 的 blkio 的继任者
 
-* `memory`
+* memory
 
 > since Linux 4.5, cgroup v1 的 memory 的继任者
 
-* `pids`
+* pids
 
 >since Linux 4.5, 与 cgroup v1 中的 pids 是同一个
 
-* `perf_event`
+* perf_event
 
 >since 4.5，与 cgroup v1 中的 perf_event 是同一个
 
-* `rdma`
+* rdma
 
 >since Linux 4.11, 与 cgroup v1 中的 rdma 是同一个
 
-* `cpu`
+* cpu
 
 >since Linux 4.15, cgroup v1 的 cpu、cpuacct 的继任者
 
