--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/3. cgroups V2.md
+++ b/Linux/cgroup/简要介绍/3. cgroups V2.md
@@ -17,13 +17,13 @@
 
 <!-- /code_chunk_output -->
 
-cgroups 为容器实现虚拟化提供了基础。随着容器技术不断发展，`cgroups v1` 中管理 **controller** 变得复杂起来。cgroups v2 的出现**简化了 Hierarchy**，并在 kernel 4.5.0 版本成为正式特性。本文将从其产生的背景，相比 v1 具体有哪些变化等方面，对 cgroups v2 进行介绍。
+cgroups 为容器实现虚拟化提供了基础. 随着容器技术不断发展，`cgroups v1` 中管理 **controller** 变得复杂起来. cgroups v2 的出现**简化了 Hierarchy**，并在 kernel 4.5.0 版本成为正式特性。本文将从其产生的背景，相比 v1 具体有哪些变化等方面，对 cgroups v2 进行介绍.
 
 # 1. 背景
 
 之前写过一篇文章对 cgroup v1 进行了介绍，但是由于当前 **k8s** 使用 **cephfs** 进行**数据存储**，当**多租户**使用时，需要**对 IO 进行限制**。当前 `cgroup v1` 由于 **memcg**(memory resource controller) 与 **blkio** 没有协作，导致 `buffer io` 的 throttle 一直没有实现。
 
-并且 cgroup v1 在**内核的实现**一直比较**混乱**，其中主要的原因在于，cgroup 为了提供灵活性，允许**进程**可以**属于多个 hierarchy** 的**不同的 group**。但实际上，**多个 hierarchy** 并**没有太大的用处**，因为**控制器**(controller)**只能属于一个 hierarchy**。 所以在**实际使用**中，通常是**每个 hierarchy 一个控制器**。
+并且 cgroup v1 在**内核的实现**一直比较**混乱**，其中主要的原因在于, cgroup 为了提供灵活性，允许**进程**可以**属于多个 hierarchy** 的**不同的 group**。但实际上，**多个 hierarchy** 并**没有太大的用处**，因为**控制器**(controller)**只能属于一个 hierarchy**。 所以在**实际使用**中，通常是**每个 hierarchy 一个控制器**.
 
 这种多 hierarchy 除了增加代码的复杂度和理解困难外，并没有太大的用处。一方面，跟踪**进程所有 controller** 变得**复杂**；另外，**各个 controller** 之间也**很难协同工作**（因为 **controller** 可能**属于不同的 hierarchy**, 所以从 3.16 开始，内核开始转向**单一层次**（`unified hierarchy`)。并且实现了**对 buffer io 的限制**。
 
