--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/3. cgroups v2.md
+++ b/Linux/cgroup/简要介绍/3. cgroups v2.md
@@ -1,11 +1,29 @@
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
 
-cgroups 为容器实现虚拟化提供了基础。随着容器技术不断发展，`cgroups v1` 中管理 **controller** 变得复杂起来。cgroups v2 的出现**简化了 Hierarchy**，并在 kernel 4.5.0 版本成为正式特性。本文将从其产生的背景，相比 v1 具体有哪些变化等方面，对 cgroups v2 进行介绍。
+<!-- code_chunk_output -->
+
+- [1. 背景](#1-背景)
+- [2. cgroups v2 的变化](#2-cgroups-v2-的变化)
+- [3. unified hierarchy](#3-unified-hierarchy)
+- [4. 支持的controllers](#4-支持的controllers)
+- [5. threaded controller](#5-threaded-controller)
+- [6. cgroup目录](#6-cgroup目录)
+  - [6.1. controller的启用/禁止](#61-controller的启用禁止)
+- [7. “no internal processes” rule](#7-no-internal-processes-rule)
+- [8. cgroup.events file](#8-cgroupevents-file)
+- [9. cgroup.stat file](#9-cgroupstat-file)
+- [10. 后代 cgroups 数量限制](#10-后代-cgroups-数量限制)
+- [11. 参考](#11-参考)
+
+<!-- /code_chunk_output -->
+
+cgroups 为容器实现虚拟化提供了基础. 随着容器技术不断发展，`cgroups v1` 中管理 **controller** 变得复杂起来. cgroups v2 的出现**简化了 Hierarchy**，并在 kernel 4.5.0 版本成为正式特性。本文将从其产生的背景，相比 v1 具体有哪些变化等方面，对 cgroups v2 进行介绍.
 
 # 1. 背景
 
 之前写过一篇文章对 cgroup v1 进行了介绍，但是由于当前 **k8s** 使用 **cephfs** 进行**数据存储**，当**多租户**使用时，需要**对 IO 进行限制**。当前 `cgroup v1` 由于 **memcg**(memory resource controller) 与 **blkio** 没有协作，导致 `buffer io` 的 throttle 一直没有实现。
 
-并且 cgroup v1 在**内核的实现**一直比较**混乱**，其中主要的原因在于，cgroup 为了提供灵活性，允许**进程**可以**属于多个 hierarchy** 的**不同的 group**。但实际上，**多个 hierarchy** 并**没有太大的用处**，因为**控制器**(controller)**只能属于一个 hierarchy**。 所以在**实际使用**中，通常是**每个 hierarchy 一个控制器**。
+并且 cgroup v1 在**内核的实现**一直比较**混乱**，其中主要的原因在于, cgroup 为了提供灵活性，允许**进程**可以**属于多个 hierarchy** 的**不同的 group**. 但实际上, **多个 hierarchy** 并**没有太大的用处**, 因为**控制器**(controller)**只能属于一个 hierarchy**. 所以在**实际使用**中, 通常是**每个 hierarchy 一个控制器** .
 
 这种多 hierarchy 除了增加代码的复杂度和理解困难外，并没有太大的用处。一方面，跟踪**进程所有 controller** 变得**复杂**；另外，**各个 controller** 之间也**很难协同工作**（因为 **controller** 可能**属于不同的 hierarchy**, 所以从 3.16 开始，内核开始转向**单一层次**（`unified hierarchy`)。并且实现了**对 buffer io 的限制**。
 
@@ -79,36 +97,36 @@ cgroup_no_v1=all      # all 将所有的controller设置为对cgroup v1不可用
 
 当前 cgroup v2 支持以下 controller:
 
-* `io`
+* io
 
 >since Linux 4.5, cgroup v1 的 blkio 的继任者
 
-* `memory`
+* memory
 
 > since Linux 4.5, cgroup v1 的 memory 的继任者
 
-* `pids`
+* pids
 
 >since Linux 4.5, 与 cgroup v1 中的 pids 是同一个
 
-* `perf_event`
+* perf_event
 
 >since 4.5，与 cgroup v1 中的 perf_event 是同一个
 
-* `rdma`
+* rdma
 
 >since Linux 4.11, 与 cgroup v1 中的 rdma 是同一个
 
-* `cpu`
+* cpu
 
 >since Linux 4.15, cgroup v1 的 cpu、cpuacct 的继任者
 
-# threaded controller
+# 5. threaded controller
 
 
-# cgroup目录
+# 6. cgroup目录
 
-## 5. controller的启用/禁止
+## 6.1. controller的启用/禁止
 
 在 **hierarchy** 下的**每一个 cgroup** 中都会包含如下两个文件:
 
@@ -130,13 +148,13 @@ cgroups v2 的具体组织结构如下图所示
 
 ![2020-12-16-16-35-53.png](./images/2020-12-16-16-35-53.png)
 
-# 6. “no internal processes” rule
+# 7. “no internal processes” rule
 
 与 cgroups v1 不同, cgroups v2 **只能**将**进程**绑定到**叶子节点**。因此不能绑定进程到任何一个**已开启 controller** 的任何 subgroup 中。
 
 ![2020-12-16-16-54-55.png](./images/2020-12-16-16-54-55.png)
 
-# 7. cgroup.events file
+# 8. cgroup.events file
 
 在 cgroups v2 的实现中，也对 **group empty** 时获取通知的机制进行了优化。
 
@@ -144,14 +162,14 @@ cgroups v1 使用 `release_agent` 和 `notify_on_release` 在 v2 中被移除。
 
 当前在这个文件中只含有一个 key 就是 populated，对应的 value 是 0。0 表示 cgroup 中没有 process，1 表示 cgroup 中包含 process。
 
-# cgroup.stat file
+# 9. cgroup.stat file
 
 在 cgroups v2 hierarchy 下的每个 group 都会包含一个只读文件 cgroup.stat。它的内容也是 key-value 的形式。当前这个文件中包含如下两个 key:
 
 * `nr_descendants`, 表示cgroup中存活的subgroup的数量
 * `nr_dying_descendants`, 表示cgroup中已经死亡的cgroup的数量
 
-# 后代 cgroups 数量限制
+# 10. 后代 cgroups 数量限制
 
 在 cgroups v2 hierarchy 中还包含了两个用于查看和设置该 cgroups 下的后代 cgroups 数量的限制文件:
 
@@ -163,6 +181,6 @@ cgroups v1 使用 `release_agent` 和 `notify_on_release` 在 v2 中被移除。
 
 当前可以创建的活跃cgroup目录的最大数量，默认值”max”表示不限制。超过限制，返回EAGAIN。
 
-# 参考
+# 11. 参考
 
 原文: https://mp.weixin.qq.com/s/3a5k3YA6ALri3BrQWQbOpw
