--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/1. 概念和术语.md
+++ b/Linux/cgroup/简要介绍/1. 概念和术语.md
@@ -12,7 +12,7 @@
 
 # 1. 什么是cgroup
 
-cgroup是一种机制，用于**按层次结构组织进程**并以**可控**和**可配置**的方式**沿层次结构分配系统资源**。
+cgroup是一种机制, 用于**按层次结构组织进程**并以**可控**和**可配置**的方式**沿层次结构分配系统资源**。
 
 cgroup主要由两部分组成 - **核心**和**控制器**。
 
@@ -22,13 +22,13 @@ cgroup主要由两部分组成 - **核心**和**控制器**。
 
 cgroup形成树状结构，系统中的每个进程都属于一个cgroup。进程的所有线程都属于同一个cgroup。创建时，所有进程都放入父进程当时所属的cgroup中。可以将一个进程迁移到另一个cgroup。流程的迁移不会影响已经存在的后代流程。
 
-遵循某些结构约束，可以在cgroup上选择性地启用或禁用控制器。所有控制器行为都是分层的-如果在cgroup上启用了控制器，则它将影响属于cgroup的所有进程，这些进程组成了cgroup的包含子层次结构。在嵌套cgroup上启用控制器后，它将始终进一步限制资源分配。在更远的层次结构中设置的限制不能被覆盖。
+遵循某些结构约束, 可以在cgroup上选择性地启用或禁用控制器. 所有控制器行为都是分层的-如果在cgroup上启用了控制器, 则它将影响属于cgroup的所有进程, 这些进程组成了cgroup的包含子层次结构. 在嵌套cgroup上启用控制器后, 它将始终进一步限制资源分配. 在更远的层次结构中设置的限制不能被覆盖. 
 
 # 2. 术语和一句话介绍
 
 这里介绍下 cgroup v1 和 cgroup v2, 有必要约定一些术语, 这些仅限于此.
 
-`process`是“进程”，`task`是“线程”。
+`process`是“进程”, `task`是“线程”.
 
 `subsystem`或者`resource controllers`是cgroup中某一类**资源的管理器**，例如管理cpu的叫做`cpu controller`，管理内存的叫做`memory controller`，统一称呼为`cgroup controller`, “**cgroup控制器**”。
 
