--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/1. 概念和术语.md
+++ b/Linux/cgroup/简要介绍/1. 概念和术语.md
@@ -20,7 +20,7 @@ cgroup主要由两部分组成 - **核心**和**控制器**。
 
 * **cgroup控制器**通常负责**沿层次结构分配特定类型的系统资源**，尽管有实用程序控制器可用于资源分配以外的目的。
 
-cgroup形成树状结构，系统中的每个进程都属于一个cgroup。进程的所有线程都属于同一个cgroup。创建时，所有进程都放入父进程当时所属的cgroup中。可以将一个进程迁移到另一个cgroup。流程的迁移不会影响已经存在的后代流程。
+cgroup形成树状结构，系统中的每个进程都属于一个cgroup。进程的所有线程都属于同一个cgroup。**创建**时，所有进程都放入**父进程当时所属的cgroup**中。可以将一个进程迁移到另一个cgroup。流程的迁移不会影响已经存在的后代流程。
 
 遵循某些结构约束, 可以在cgroup上选择性地启用或禁用控制器. 所有控制器行为都是分层的-如果在cgroup上启用了控制器, 则它将影响属于cgroup的所有进程, 这些进程组成了cgroup的包含子层次结构. 在嵌套cgroup上启用控制器后, 它将始终进一步限制资源分配. 在更远的层次结构中设置的限制不能被覆盖. 
 
