--- Auto-Git Commit ---

--- a/Vim/4. 寄存器.md
+++ b/Vim/4. 寄存器.md
@@ -34,25 +34,25 @@
 
 首先对vim中的寄存器来进行个大致浏览，它主要分为这么几个部分：
 
-- 1.无名（unnamed）寄存器：(")，缓存**最后一次操作内容**, **默认寄存器**；
+- 1.无名（unnamed）寄存器：(`"`)，缓存**最后一次操作内容**, **默认寄存器**；
 
-- 2.数字（numbered）寄存器：(0 ～ 9)，缓存最近操作内容，复制与删除有别, **0寄存器**缓存最近一次**复制的内容**，1-9缓存**最近9次删除内容**
+- 2.数字（numbered）寄存器：(`0 ～ 9`)，缓存最近操作内容，复制与删除有别, **0寄存器**缓存最近一次**复制的内容**，1-9缓存**最近9次删除内容**
 
-- 3.行内删除（small delete）寄存器：(\-)，缓存行内删除内容；
+- 3.行内删除（small delete）寄存器：(`-`)，缓存行内删除内容；
 
-- 4.具名（named）寄存器：(a ～ z)，指定时可用；
+- 4.具名（named）寄存器：(`a ~ z`)，指定时可用；
 
-- 5.只读（read\-only）寄存器：(:), (.), (%), (#)，分别缓存最近命令、最近插入文本、当前文件名、当前交替文件名；
+- 5.只读（read\-only）寄存器：(`:`), (`.`), (`%`), (`#`)，分别缓存最近命令、最近插入文本、当前文件名、当前交替文件名；
 
-- 6.表达式（expression）寄存器：(=)，只读，用于执行表达式命令；
+- 6.表达式（expression）寄存器：(`=`)，只读，用于执行表达式命令；
 
-- 7.选择及拖拽（selection and drop）寄存器：(\*), (+), (~)，存取GUI选择文本，可用于与外部应用交互，**使用前提为系统剪切板（clipboard）可用**；
+- 7.选择及拖拽（selection and drop）寄存器：(`*`), (`+`), (`~`)，存取GUI选择文本，可用于与外部应用交互，**使用前提为系统剪切板（clipboard）可用**；
 
-\+：系统剪切板寄存器，关联系统剪切板，保存在这个寄存器中的内容可以被系统其他程序访问，也可以通过这个寄存器访问其他程序保存到剪切板中的内容。
+>`+`：系统剪切板寄存器，关联系统剪切板，保存在这个寄存器中的内容可以被系统其他程序访问，也可以通过这个寄存器访问其他程序保存到剪切板中的内容。
 
-- 8.黑洞（black hole）寄存器：(\_)，不缓存操作内容（干净删除）；
+- 8.黑洞（black hole）寄存器：(`_`)，不缓存操作内容（干净删除）；
 
-- 9.模式寄存器（last search pattern）：(\/)，缓存最近的搜索模式。
+- 9.模式寄存器（last search pattern）：(`/`)，缓存最近的搜索模式。
 
 ## 2.1. 无名寄存器(默认寄存器): "
 
@@ -157,13 +157,13 @@ printf("World!\n");
 
 **特定信息的寄存器**，主要是下面这几个：
 
-- 当前文件名寄存器 （%）
+- 当前文件名寄存器 （`%`）
 
-- 轮换文件名寄存器 （#）
+- 轮换文件名寄存器 （`#`）
 
-- 上次执行的ex命令 （:）
+- 上次执行的ex命令 （`:`）
 
-- 上次查找的关键字 （/）
+- 上次查找的关键字 （`/`）
 
 打开了两个文件file1和file2,然后切换到了file2,并进行了一次查找，查找了hello关键字，执行了两次reg命令，第二次reg命令执行结果如下图：
 
