--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第1篇 KVM虚拟化基础/第3章 构建KVM环境/4. 编译和安装QEMU.md
@@ -47,6 +47,12 @@ https://www.qemu.org/download/
 
 ```
 [root@kvm-host ~]# git clone git://git.qemu.org/qemu.git
+
+// 因为有子模块, 所以添加 --recurse-submodules
+git clone --recurse-submodules https://git.qemu.org/git/qemu.git
+
+// 如果已经clone了
+git submodule update --init --recursive
 ```
 
 # 3. 配置和编译QEMU
