--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -27,21 +27,25 @@
 
 # 2. guest 对 APIC-access page 的访问
 
-由于 **EPT** 映射机制的引入，guest 访问 `APIC-access page` 页面可能出现三种途径： linear access（线性访问）、guest-physical access（客户端物理访问）以及 physical access（物理访问）
+由于 **EPT** 映射机制的引入，guest 访问 `APIC-access page` 页面可能出现三种途径： `linear access`（**线性访问**）、`guest-physical access`（**客户端物理访问**）以及 `physical access`（**物理访问**）
 
 ## 2.1. linear access(线性访问)
 
+线性地址转换的物理地址落在 `APIC-access page` 内。
+
 线性访问是指下面两种途径:
 
-(1) 当“enable EPT”为 0 时，guest 尝试使用线性地址访问，这个线性地址经过 `paging-structure` 转换后的物理地址落在 APC-access page 页面内。
+(1) 当“enable EPT”为 **0** 时，guest 尝试使用线性地址访问，这个线性地址经过 `paging-structure` 转换后的物理地址落在 APC-access page 页面内。
 
-(2) 当“enable EPT”为 1 时，guest-linear address 经过 guest paging structure 以及  EPT paging structure 转换的最终 host-physical address 落在 APC-access page 页面内。
+(2) 当“enable EPT”为 1 时，guest-linear address 经过 `guest paging structure` 以及 `EPT paging structure` 转换的最终 host-physical address 落在 APC-access page 页面内。
 
 这两种情况下，对 `APIC-access page` 页面的访问发起源都是线性地址。也就是：访问的**最终物理地址**是由**线性地址转换**而来。
 
 ## 2.2. guest-physical access(虚拟机物理地址访问)
 
-guest-physical 访问是在启用 EPT 机制的情况下，**guest 发起访问** `APIC-access page` 页面的地址是 `guest-physical address`(**虚拟机物理地址**)。包括下面的几种情况。
+guest-physical 访问是在**启用 EPT 机制**的情况下，**guest 发起访问** `APIC-access page` 页面的地址是 `guest-physical address`(**虚拟机物理地址**)。
+
+包括下面的几种情况。
 
 (1) 处理器在转换 guest-linear address 时（参见 6.1.8.3 节及图 6-11），由于 guest  paging structure 表项里的 **GPA 转换后的 HPA** 地址值落在了 `APIC-access page` 页面内，也就是处理器在各级 guest paging structure 进行 **walk 流程**时遇到 GPA 访问了 `APIC-access page` 页面。
 
