--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -61,19 +61,28 @@ guest-physical 访问是在**启用 EPT 机制**的情况下，**guest 发起访
 
 取决于 `secondary processor-based Vm-execution control` 字段 `enable EPT` 位的设置，下面的情况属于物理访问。
 
-* 当“enable EPT”位为 0 时（关闭 EPT 机制）:
+* 当“`enable EPT`”位为 **0** 时（关闭 EPT 机制）:
+
     * 在处理器转换线性地址时（进行 walk 流程），由于 paging structure 表项里的物理地址落在了 APIC-access page 页面内。
-    * 在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-TO-CR3 指令而引起了加载 PDPTEs 表项，CR3 寄存器内的物理地址落在了 APIC-access page 页面
+
+    * 在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-TO-CR3 指令而引起了加载 PDPTEs 表项，CR3 寄存器内的物理地址落在了 APIC-access page 页面.
+
     * 在更新 paging structure 表项的 dirty 或者accessed 标志位时，表项地址落在了 APIC-access page 页面内
 
-* 当“enable EPT“位为 1 时（启用 EPT 机制）:
+* 当“`enable EPT`“位为 **1** 时（启用 EPT 机制）:
+
     * 在处理器转换 `guest-physical address` 时，由于 `EPT paging structure` 表项里的物理地址落在了 APIC-access page 页面内。
+
     * 在**更新 EPT paging structure 表项**的 dirty 或者accessed 标志位时（启用了 dirty标志位），表项的物理地址落在了 `APIC-access page` 页面内。
 
 * 访问的 VMCS 区域落在了 APIC-access page 页面内。从另一个角度看，也就是 VMCS 区城的物理地址为 APIC-access page 地址。
+
 * 访问 VMCS 区城内**所引用的数据区域**的物理地址落在了 APIC-access page 页面内。包括 `I/O bitmap`、`MSR bitmap` 以及 `virtual-apic page` 区域。
+
 * 在发生 SMM 模式的切换时（进入或者退出 SMM）访问了 APIC-access page 页面发生。包括下面的情况（注意：实际上这**不可能发生在 VMX non-root operation 模式内**。）:
+
     * 在默认 SMM 处理下，从 SMI 的 delivery 到执行 RSM 指令期间访问的  SMRAN 落在 APIC-access page 页面内。
+
     * 在 SMM 双重监控处理下，从产生 SMM Vm-exit 到 Vm-entry that return from SMM 期间访问了 APIC-access page 页面（如 MSEG 区域）
 
 在物理访问里，发起访问 `APIC-access page` 页面的物理地址，**不是由线性地址或者 guest-physical address 转换**而来。
