--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -71,7 +71,7 @@ guest-physical 访问是在**启用 EPT 机制**的情况下，**guest 发起访
 
 * 当“`enable EPT`“位为 **1** 时（启用 EPT 机制）:
 
-    * 在处理器转换 `guest-physical address` 时，由于 `EPT paging structure` 表项里的物理地址落在了 APIC-access page 页面内。
+    * 在处理器转换 `guest-physical address` 过程中，由于 `EPT paging structure` 表项里的物理地址落在了 APIC-access page 页面内。
 
     * 在**更新 EPT paging structure 表项**的 dirty 或者accessed 标志位时（启用了 dirty标志位），表项的物理地址落在了 `APIC-access page` 页面内。
 
