--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page.md
@@ -65,15 +65,15 @@ guest-physical 访问是在**启用 EPT 机制**的情况下，**guest 发起访
 
     * 在处理器转换线性地址时（进行 walk 流程），由于 paging structure 表项里的物理地址落在了 APIC-access page 页面内。
 
-    * 在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-TO-CR3 指令而引起了加载 PDPTEs 表项，CR3 寄存器内的物理地址落在了 APIC-access page 页面.
+    * 在 guest 使用 PAE 分页模式的情况下，由于执行了 MOV-TO-CR3 指令更新CR3寄存器时会引起了加载 PDPTEs 表项，CR3 寄存器内的物理地址落在了 APIC-access page 页面.
 
-    * 在更新 paging structure 表项的 dirty 或者accessed 标志位时，表项地址落在了 APIC-access page 页面内
+    * 在更新 paging structure 表项的 dirty 或者 accessed 标志位时，表项地址落在了 APIC-access page 页面内
 
 * 当“`enable EPT`“位为 **1** 时（启用 EPT 机制）:
 
     * 在处理器转换 `guest-physical address` 过程中，由于 `EPT paging structure` 表项里的物理地址落在了 APIC-access page 页面内。
 
-    * 在**更新 EPT paging structure 表项**的 dirty 或者accessed 标志位时（启用了 dirty标志位），表项的物理地址落在了 `APIC-access page` 页面内。
+    * 在**更新 EPT paging structure 表项**的 **dirty** 或者 **accessed** 标志位时（启用了 dirty标志位），表项的物理地址落在了 `APIC-access page` 页面内。
 
 * 访问的 VMCS 区域落在了 APIC-access page 页面内。从另一个角度看，也就是 VMCS 区城的物理地址为 APIC-access page 地址。
 
