--- a/Virtualization/3. KVM/1. 原理概述/6. 学习方法.md
+++ b/Virtualization/3. KVM/1. 原理概述/6. 学习方法.md
@@ -6,3 +6,7 @@
 2. 通过ftrace追踪某个方法, 或者以vcpu thread为单位整个追踪.
 
 这里提供的代码分析偏重于整体逻辑以及软件实现, 其中硬件支持的代码主要在手册翻译部分附上.
+
+* 
+
+* Intel 手册相关的见 `Learning/处理器虚拟化技术`
