--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page[code].md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page[code].md
@@ -13,9 +13,18 @@
 ```
 
 ```cpp
+kvm_arch_vcpu_create(); // arch/x86/kvm/x86.c
+ 
+kvm_vcpu_reset(vcpu, false); // arch/x86/kvm/x86.c
 
-kvm_lapic_set_base();           // arch/x86/kvm/lapic.c
+kvm_lapic_reset(vcpu, init_event); // arch/x86/kvm/lapic.c
 
-vmx_set_virtual_apic_mode();    // arch/x86/kvm/vmx/vmx.c
+kvm_lapic_set_base(vcpu, APIC_DEFAULT_PHYS_BASE | MSR_IA32_APICBASE_ENABLE); // arch/x86/kvm/lapic.c
+
+vmx_set_virtual_apic_mode(); // arch/x86/kvm/vmx/vmx.c
+
+```
+
+```
 
 ```
