--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page[code].md
+++ b/Virtualization/Learning/处理器虚拟化技术/第7章 中断虚拟化/2. Local APIC虚拟化/3. APIC-access page[code].md
@@ -25,6 +25,9 @@ vmx_set_virtual_apic_mode(); // arch/x86/kvm/vmx/vmx.c
 
 ```
 
-```
+```cpp
 
+hardware_setup(); // arch/x86/kvm/vmx/vmx.c
+
+setup_vmcs_config(); // arch/x86/kvm/vmx/vmx.c
 ```
