--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/2. cgroups v1.md
+++ b/Linux/cgroup/简要介绍/2. cgroups v1.md
@@ -159,6 +159,7 @@ tmpfs on /sys/fs/cgroup type tmpfs (ro,nosuid,nodev,noexec,mode=755)
 mount -t cgroup -o subsystems XXX $hierarchy_path/name
 
 // 示例
+mkdir /data/cg_test/mem_test
 mount -t cgroup -o memory mem_test /data/cg_test/mem_test
 ```
 
@@ -183,9 +184,9 @@ mount -t cgroup cg_test /data/cg_test
 mount -t cgroup -o none,name=somename none /some/mount/point
 ```
 
-没有挂载controller的cgroup可以用来跟踪进程，例如在进程消失导致cgroup为空时，cgroup的通知回调会被触发。
+**没有挂载controller的cgroup**可以用来**跟踪进程**，例如在进程消失导致cgroup为空时，cgroup的通知回调会被触发。
 
-注: 这里就不需要自己手动创建的controller的目录
+>注: 这时就不需要自己手动创建的controller的目录
 
 在hierarchy所在目录下面就是这个 hierarchy 所有可用的subsystem.
 
