--- Auto-Git Commit ---

--- a/Linux/cgroup/简要介绍/2. cgroups v1.md
+++ b/Linux/cgroup/简要介绍/2. cgroups v1.md
@@ -192,7 +192,10 @@ mount -t cgroup -o none,name=somename none /some/mount/point
 
 例如:
 
-```mkdir
+```shell
+// 创建hierarchy
+# mkdir /data/cg_test
+
 // 在hierarchy下创建controller目录
 # mkdir -p /data/cg_test/mem_test
 
@@ -210,16 +213,15 @@ drwxr-xr-x 5 root root 0 Dec 16 16:30 mem_test
 
 // 查看mem_test这个controller的文件接口
 # ls /data/cg_test/mem_test/
-cgroup.clone_children           memory.kmem.tcp.failcnt             memory.memsw.max_usage_in_bytes  memory.use_hierarchy
-cgroup.event_control            memory.kmem.tcp.limit_in_bytes      memory.memsw.usage_in_bytes      memory.vmstat
-cgroup.procs                    memory.kmem.tcp.max_usage_in_bytes  memory.move_charge_at_immigrate  notify_on_release
-cgroup.sane_behavior            memory.kmem.tcp.usage_in_bytes      memory.numa_stat                 onion
-memory.failcnt                  memory.kmem.usage_in_bytes          memory.oom_control               release_agent
-memory.force_empty              memory.limit_in_bytes               memory.pressure_level            system.slice
-memory.kmem.failcnt             memory.max_usage_in_bytes           memory.soft_limit_in_bytes       tasks
-memory.kmem.limit_in_bytes      memory.meminfo                      memory.stat                      user.slice
-memory.kmem.max_usage_in_bytes  memory.memsw.failcnt                memory.swappiness
-memory.kmem.slabinfo            memory.memsw.limit_in_bytes         memory.usage_in_bytes
+cgroup.clone_children       memory.kmem.max_usage_in_bytes      memory.memsw.failcnt             memory.stat
+cgroup.event_control        memory.kmem.slabinfo                memory.memsw.limit_in_bytes      memory.swappiness
+cgroup.procs                memory.kmem.tcp.failcnt             memory.memsw.max_usage_in_bytes  memory.usage_in_bytes
+cgroup.sane_behavior        memory.kmem.tcp.limit_in_bytes      memory.memsw.usage_in_bytes      memory.use_hierarchy
+init.scope                  memory.kmem.tcp.max_usage_in_bytes  memory.move_charge_at_immigrate  notify_on_release
+memory.failcnt              memory.kmem.tcp.usage_in_bytes      memory.numa_stat                 release_agent
+memory.force_empty          memory.kmem.usage_in_bytes          memory.oom_control               system.slice
+memory.kmem.failcnt         memory.limit_in_bytes               memory.pressure_level            tasks
+memory.kmem.limit_in_bytes  memory.max_usage_in_bytes           memory.soft_limit_in_bytes       user.slice
 ```
 
 从结果看:
@@ -265,7 +267,7 @@ umount /data/cg_test/mem_test
 
 ## 4.4. 创建 Control Groups
 
-cgroup是以**目录的形式**呈现的，`/`是cgroup的**根目录**，注意**cgroup的根目录**和**挂载目录**不是一回事，cgroup可能**挂载**在`/sys/fs/cgroup`或者`/tmp/cgroup`等任意目录，无论挂载在哪里，cgroup的**根目录**都是`“/”`。
+cgroup是以**目录的形式**呈现的，`/`是cgroup的**根目录**，注意**cgroup的根目录**和**挂载目录**(hierarchy所在目录)不是一回事，cgroup可能**挂载**在`/sys/fs/cgroup`或者`/tmp/cgroup`等任意目录，无论挂载在哪里，cgroup的**根目录**都是`“/”`。
 
 假设cgroup的`cpu controller`的挂载点是`/sys/fs/cgroup/cpu`，那么目录`/sys/fs/cgroup/cpu/cg1`对应的**cgroup的目录**是`/cg1`.
 
