--- Auto-Git Commit ---

--- a/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/3. 内存区域zone.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/3. 内存区域zone.md
@@ -535,7 +535,7 @@ enum zone_watermarks
 #define high_wmark_pages(z) (z->watermark[WMARK_HIGH])
 ```
 
-在**linux-2.4**中, zone结构中使用如下方式表示水位, 参照[include/linux/mmzone.h?v=2.4.37, line 171](http://lxr.free-electrons.com/source/include/linux/mmzone.h?v=2.4.37#L171)
+在**linux-2.4**中, zone结构中使用如下方式表示水位, 参照[include/linux/mmzone.h?
 
 ``` c
 typedef struct zone_watermarks_s
