--- a/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/3. 内存区域zone.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/3. 内存区域zone.md
@@ -553,19 +553,19 @@ typedef struct zone_struct {
 
 当系统中**可用内存很少**的时候，系统**进程kswapd被唤醒**,开始**回收释放page**, 水印这些参数(WMARK\_MIN, WMARK\_LOW, WMARK\_HIGH)影响着这个代码的行为
 
-每个zone有三个水平标准：`watermark[WMARK\_MIN]`, `watermark[WMARK\_LOW]`, `watermark[WMARK_HIGH]`，帮助确定**zone中内存分配使用**的压力状态
+每个zone有三个水平标准：`watermark[WMARK_MIN]`, `watermark[WMARK_LOW]`, `watermark[WMARK_HIGH]`，帮助确定**zone中内存分配使用**的压力状态
 
 | 标准 | 描述 |
 |:----:|:---|
-| `watermark[WMARK_MIN]` | 当空闲页面的数量达到page\_min所标定的数量的时候， 说明页面数非常紧张, **分配页面的动作**和**kswapd线程同步运行**.<br>WMARK\_MIN所表示的page的数量值，是在内存初始化的过程中调用[**free\_area\_init\_core**](http://lxr.free-electrons.com/source/mm/page_alloc.c?v=4.7#L5932)中计算的。这个数值是根据zone中的page的数量除以一个大于1的系数来确定的。通常是这样初始化的**ZoneSizeInPages/12** |
-| `watermark[WMARK_LOW]` | 当空闲页面的数量达到WMARK\_LOW所标定的数量的时候，说明页面刚开始紧张, 则**kswapd线程将被唤醒**，并开始释放回收页面 |
-| `watermark[WMARK_HIGH]` | 当空闲页面的数量达到page\_high所标定的数量的时候， 说明内存页面数充足, 不需要回收, kswapd线程将重新休眠，**通常这个数值是page_min的3倍** |
+| `watermark[WMARK_MIN]` | 当空闲页面的数量达到page\_min所标定的数量的时候， 说明**页面数非常紧张**, **分配页面的动作**和**kswapd线程同步运行**.<br><br>WMARK\_MIN所表示的page的数量值，是在内存初始化的过程中调用[**free\_area\_init\_core**](http://lxr.free-electrons.com/source/mm/page_alloc.c?v=4.7#L5932)中计算的。这个数值是根据zone中的page的数量除以一个大于1的系数来确定的。<br><br>通常是这样初始化的**ZoneSizeInPages/12** |
+| `watermark[WMARK_LOW]` | 当空闲页面的数量达到`WMARK\_LOW`所标定的数量的时候，说明页面**刚开始紧张**, 则**kswapd线程将被唤醒**，并开始**释放回收页面** |
+| `watermark[WMARK_HIGH]` | 当空闲页面的数量达到page\_high所标定的数量的时候, 说明内存页面数充足, 不需要回收, kswapd线程将**重新休眠**，**通常这个数值是page_min的3倍** |
 
-- 如果空闲页多于pages\_high = watermark[WMARK\_HIGH], 则说明内存页面充足, 内存域的状态是理想的.
+- 如果空闲页多于`pages_high = watermark[WMARK_HIGH]`, 则说明内存页面充足, 内存域的状态是理想的.
 
-- 如果空闲页的数目低于pages\_low = watermark[WMARK\_LOW], 则说明内存页面开始紧张, 内核开始将页换出到硬盘.
+- 如果空闲页的数目低于`pages_low = watermark[WMARK_LOW]`, 则说明内存页面开始紧张, 内核开始**将页换出到硬盘**.
 
-- 如果空闲页的数目低于pages\_min = watermark[WMARK\_MIN], 则内存页面非常紧张, 页回收工作的压力就比较大
+- 如果空闲页的数目低于`pages_min = watermark[WMARK_MIN]`, 则内存页面非常紧张, 页回收工作的压力就比较大
 
 kswapd和这3个参数的互动关系如下图：
 
