--- Auto-Git Commit ---

--- a/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/3. 内存区域zone.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/1. 内存描述/3. 内存区域zone.md
@@ -558,7 +558,7 @@ typedef struct zone_struct {
 | 标准 | 描述 |
 |:----:|:---|
 | `watermark[WMARK_MIN]` | 当空闲页面的数量达到page\_min所标定的数量的时候， 说明**页面数非常紧张**, **分配页面的动作**和**kswapd线程同步运行**.<br><br>WMARK\_MIN所表示的page的数量值，是在内存初始化的过程中调用[**free\_area\_init\_core**](http://lxr.free-electrons.com/source/mm/page_alloc.c?v=4.7#L5932)中计算的。这个数值是根据zone中的page的数量除以一个大于1的系数来确定的。<br><br>通常是这样初始化的**ZoneSizeInPages/12** |
-| `watermark[WMARK_LOW]` | 当空闲页面的数量达到`WMARK\_LOW`所标定的数量的时候，说明页面**刚开始紧张**, 则**kswapd线程将被唤醒**，并开始**释放回收页面** |
+| `watermark[WMARK_LOW]` | 当空闲页面的数量达到`WMARK_LOW`所标定的数量的时候，说明页面**刚开始紧张**, 则**kswapd线程将被唤醒**，并开始**释放回收页面** |
 | `watermark[WMARK_HIGH]` | 当空闲页面的数量达到page\_high所标定的数量的时候, 说明内存页面数充足, 不需要回收, kswapd线程将**重新休眠**，**通常这个数值是page_min的3倍** |
 
 - 如果空闲页多于`pages_high = watermark[WMARK_HIGH]`, 则说明内存页面充足, 内存域的状态是理想的.
