--- Auto-Git Commit ---

--- a/Linux/Memory/系统学习/Linux-3.14.12内存管理/1. 内存布局探测.md
+++ b/Linux/Memory/系统学习/Linux-3.14.12内存管理/1. 内存布局探测.md
@@ -1,4 +1,4 @@
-先看[Linux启动过程](http://blog.chinaunix.net/uid-26859697-id-4128236.html)
+先看 `Linux启动过程`: `Linux/Boot/[x86]linux机器启动过程-3.2.55.md`
 
 Linux系统的内存管理是一个很复杂的“工程”，它不仅仅是物理内存管理，同时包括虚拟内存管理、内存交换和回收等，还有管理中的各式各样的算法。这也就表明了它的分析方法很多，因为切入点很多，这里分析内存管理采用了自底向上分析方法。
 
