--- a/Linux/Memory/系统学习/Linux-3.14.12内存管理/14. 构建内存管理框架（2）.md
+++ b/Linux/Memory/系统学习/Linux-3.14.12内存管理/14. 构建内存管理框架（2）.md
@@ -1,8 +1,9 @@
+
 前面构建内存管理框架，已经将内存管理node节点设置完毕，接下来将是管理区和页面管理的构建。此处代码实现主要在于setup\_arch()下的一处钩子：x86\_init.paging.pagetable\_init()。据前面分析可知x86\_init结构体内该钩子实际上挂接的是native\_pagetable\_init()函数。
 
 native\_pagetable\_init()：
 
-```
+```cpp
 # /arch/x86/mm/init_32.c
 
 void __init native_pagetable_init(void)
