--- a/Linux/Memory/系统学习/Linux-3.14.12内存管理/2. 初探保护模式（1）.md
+++ b/Linux/Memory/系统学习/Linux-3.14.12内存管理/2. 初探保护模式（1）.md
@@ -2,7 +2,7 @@
 
 linux内核开启A20，实现开启功能的函数是enable\_a20，具体代码在/arch/x86/boot/a20.c
 
-```
+```cpp
 /*
  * Actual routine to enable A20; return 0 on ok, -1 on failure
  */
