--- a/Linux/Memory/系统学习/内存管理全教程(必看)/4. 伙伴系统/17. alloc_page分配内存空间.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/4. 伙伴系统/17. alloc_page分配内存空间.md
@@ -18,7 +18,7 @@
 
 内核源代码将`__alloc_pages_nodemask`称之为"伙伴系统的心脏"(`the 'heart' of the zoned buddy allocator``), 因为它处理的是实质性的内存分配.
 
-```
+```cpp
 //  http://lxr.free-electrons.com/source/include/linux/gfp.h?v=4.7#L428
 static inline struct page *
 __alloc_pages(gfp_t gfp_mask, unsigned int order,
@@ -56,6 +56,8 @@ enum zone_watermarks {
 内核需要定义一些函数使用的标志，用于控制**到达各个水印**指定的临界状态时的**行为**,这些标志用宏来定义, 定义在[mm/internal.h?v=4.7, line 453](http://lxr.free-electrons.com/source/mm/internal.h?v=4.7#L453)
 
 ```cpp
+// mm/internal.h
+
 /* The ALLOC_WMARK bits are used as an index to zone->watermark */
 #define ALLOC_WMARK_MIN         WMARK_MIN	/*  1 = 0x01, 使用pages_min水印   */
 #define ALLOC_WMARK_LOW         WMARK_LOW	/*  2 = 0x02, 使用pages_low水印   */
@@ -72,7 +74,13 @@ enum zone_watermarks {
 #define ALLOC_FAIR              0x100 /* fair zone allocation */
 ```
 
-前几个标志(`ALLOC_WMARK_MIN`,`ALLOC_WMARK_LOW`,`ALLOC_WMARK_HIGH`,`ALLOC_NO_WATERMARKS`)表示在判断页是否可分配时,需要考虑哪些水印.**默认**情况下(即没有因其他因素带来的压力而需要更多的内存),只有**内存域包含页的数目**至少为**zone->pages\_high**时,才能**分配页**.这对应于`ALLOC_WMARK_HIGH`标志.如果要使用较低(zone->pages\_low)或最低(zone->pages\_min)设置,则必须相应地设置`ALLOC_WMARK_MIN`或`ALLOC_WMARK_LOW`.而`ALLOC_NO_WATERMARKS`则通知内核在进行内存分配时**不要考虑内存水印**.
+前几个标志(`ALLOC_WMARK_MIN`,`ALLOC_WMARK_LOW`,`ALLOC_WMARK_HIGH`,`ALLOC_NO_WATERMARKS`)表示在**判断页是否可分配**时,需要考虑哪些水印.
+
+* **默认**情况下(即没有因其他因素带来的压力而需要更多的内存),只有**内存域包含页的数目至少**为`zone->pages_high`时,才能**分配页**, 这对应于`ALLOC_WMARK_HIGH`标志;
+
+* 如果要使用较低(`zone->pages_low`)或最低(`zone->pages_min`)设置,则必须相应地设置`ALLOC_WMARK_MIN`或`ALLOC_WMARK_LOW`;
+
+* 而`ALLOC_NO_WATERMARKS`则通知内核在进行内存分配时**不要考虑内存水印**.
 
 **ALLOC\_HARDER**通知伙伴系统在急需内存时**放宽分配规则**.在**分配高端内存域**的内存时,ALLOC\_HIGH进一步放宽限制. 
 
@@ -80,14 +88,15 @@ enum zone_watermarks {
 
 **ALLOC\_CMA**通知伙伴系统从**CMD区域**中分配内存
 
-最后,**ALLOC\_FAIR**则希望内核**公平(均匀)的从内存域zone**中进行内存分配
+最后, **ALLOC\_FAIR**则希望内核**公平(均匀)的从内存域zone**中进行内存分配
 
 ## 2.2. zone_watermark_ok 函数检查标志
 
-设置的标志在`zone_watermark_ok`函数中检查,该函数根据**设置的标志**判断是否能从给定的内存域分配内存. 该函数定义在[mm/page_alloc.c?v=4.7, line 2820](http://lxr.free-electrons.com/source/mm/page_alloc.c?v=4.7#L2820)
+设置的标志在`zone_watermark_ok`函数中检查, 该函数根据**设置的标志**判断是否能从给定的内存域分配内存. 该函数定义在 [mm/page_alloc.c?v=4.7, line 2820](http://lxr.free-electrons.com/source/mm/page_alloc.c?v=4.7#L2820)
 
 ```cpp
-//  http://lxr.free-electrons.com/source/mm/page_alloc.c?v=4.7#L2820
+// http://lxr.free-electrons.com/source/mm/page_alloc.c?v=4.7#L2820
+
 bool zone_watermark_ok(struct zone *z, unsigned int order, unsigned long mark,
               int classzone_idx, unsigned int alloc_flags)
 {
@@ -286,8 +295,8 @@ struct alloc_context {
 | zonelist | 当**perferred\_zone**上**没有合适的页**可以分配时，就要**按zonelist中的顺序**扫描该zonelist中**备用zone列表**，一个个的**试用** |
 | nodemask | 表示**节点的mask**，就是**是否能在该节点上分配内存**，这是个**bit位数组** |
 | **preferred\_zone** | 表示从**high\_zoneidx**后找到的**合适的zone**，一般会从**该zone分配**；**分配失败**的话，就会在**zonelist**再找一个**preferred\_zone = 合适的zone** |
-| migratetype | **迁移类型**，在**zone\-\>free\_area.free\_list[XXX**] 作为**分配下标**使用，这个是用来**反碎片化**的，修改了以前的free\_area结构体，在该结构体中再添加了一个数组，该数组以迁移类型为下标，每个数组元素都挂了对应迁移类型的页链表 |
-| **high\_zoneidx** | 是表示该分配时，**所能分配的最高zone**，一般从high-->normal-->dma 内存越来越昂贵，所以一般从high到dma分配依次分配 |
+| migratetype | **迁移类型**，在`zone->free_area.free_list[XXX]` 作为**分配下标**使用，这个是用来**反碎片化**的，修改了以前的free\_area结构体，在该结构体中再添加了一个数组，该数组以迁移类型为下标，每个数组元素都挂了对应迁移类型的页链表 |
+| **high\_zoneidx** | 是表示该分配时，**所能分配的最高zone**，一般从`high-->normal-->dma` 内存越来越昂贵，所以一般从high到dma分配依次分配 |
 | spread\_dirty\_pages | |
 
 zonelist是指向备用列表的指针.在预期内存域没有空闲空间的情况下, 该列表确定了扫描系统其他内存域(和结点)的顺序.
