--- a/Linux/Memory/系统学习/内存管理全教程(必看)/4. 伙伴系统/19. 高端内存映射之vmalloc分配内存中不连续的页.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/4. 伙伴系统/19. 高端内存映射之vmalloc分配内存中不连续的页.md
@@ -19,9 +19,9 @@
 
 在IA-32系统中, 前16M划分给DMA区域,后面一直到第896M作为NORMAL直接映射区,**紧随**直接映射的前896MB物理内存，在插入的**8MB安全隙**之后,是一个用于**管理不连续内存的区域**.这一段具有**线性地址空间**的所有性质.分配到**其中的页**可能位于**物理内存中的任何地方**.通过**修改**负责该区域的**内核页表**,即可做到这一点.
 
-![内核虚拟地址空间的划分](../images/kernel_space.jpg)
+![内核虚拟地址空间的划分](./images/kernel_space.jpg)
 
-![内核虚拟地址空间的划分](../images/vmalloc_space.png)
+![内核虚拟地址空间的划分](./images/vmalloc_space.png)
 
 Persistent mappings和Fixmaps地址空间都比较小, 这里我们忽略它们,这样只剩下直接地址映射和VMALLOC区, 这个划分应该是平衡两个需求的结果
 
