--- a/Virtualization/3. KVM/6. 虚拟机时钟模拟/1. 基本原理.md
+++ b/Virtualization/3. KVM/6. 虚拟机时钟模拟/1. 基本原理.md
@@ -18,7 +18,11 @@
 
 参见`Architecture/x86/7. 时钟.md`
 
-操作系统时钟从作用上分为两种: 计时和定时器
+操作系统时钟从作用上分为两种: 
+
+* 计时
+
+* 定时器
 
 硬件方面，x86 主流平台，**计时**靠**tsc**，**定时**靠**local apic timer**。
 
