--- a/Linux/Memory/系统学习/Linux-3.14.12内存管理/25. 内存溢出保护机制（OOM）.md
+++ b/Linux/Memory/系统学习/Linux-3.14.12内存管理/25. 内存溢出保护机制（OOM）.md
@@ -1,12 +1,16 @@
 
+# OOM killer 机制
+
 Linux系统内存管理中存在着一个称之为OOM killer（Out-Of-Memory killer）的机制，该机制主要用于内存监控，监控进程的内存使用量，当系统的内存耗尽时，其将根据算法选择性地kill了部分进程。本文分析的内存溢出保护机制，也就是OOM killer机制了。
 
 回到伙伴管理算法中涉及的一函数 `__alloc_pages_nodemask()`，其里面调用的 `__alloc_pages_slowpath()` 并未展开深入，而内存溢出保护机制则在此函数中。
 
+# __alloc_pages_slowpath() 概述
+
 先行查看一下 `__alloc_pages_slowpath()` 的实现：
 
 ```cpp
-【file:/ mm/page_alloc.h】
+// mm/page_alloc.h
 static inline struct page *
 __alloc_pages_slowpath(gfp_t gfp_mask, unsigned int order,
 	struct zonelist *zonelist, enum zone_type high_zoneidx,
@@ -220,12 +224,14 @@ got_pg:
 }
 ```
 
-该函数首先判断调用者**是否禁止唤醒kswapd线程**，若不做禁止则唤醒线程进行**内存回收**工作，然后通过 `gfp_to_alloc_flags()` 对内存分配标识进行调整，而后再次调用 `get_page_from_freelist()` 尝试分配，如果分配到则退出。否则继续尝试内存分配，继续尝试分配则先行判断是否设置了 `ALLOC_NO_WATERMARKS` 标识，如果设置了，则将**忽略watermark**，调用`__alloc_pages_high_priority()`进行分配。
+该函数首先判断调用者**是否禁止唤醒kswapd线程**，若不做禁止则唤醒线程进行**内存回收**工作，然后通过 `gfp_to_alloc_flags()` 对**内存分配标识进行调整**，而后再次调用 `get_page_from_freelist()` 尝试分配，如果分配到则退出。
+
+否则继续尝试内存分配，继续尝试分配则先行判断是否设置了 `ALLOC_NO_WATERMARKS` 标识，如果设置了，则将**忽略watermark**，调用`__alloc_pages_high_priority()`进行分配。
 
 `__alloc_pages_high_priority()` 函数实现：
 
 ```cpp
-【file:/ mm/page_alloc.h】
+// mm/page_alloc.h
 /*
  * This is called in the allocator slow-path if the allocation request is of
  * sufficient urgency to ignore watermarks and take other desperate measures
@@ -251,14 +257,20 @@ __alloc_pages_high_priority(gfp_t gfp_mask, unsigned int order,
 }
 ```
 
-可以看到该函数根据分配标识 `__GFP_NOFAIL` 不断地调用 `get_page_from_freelist()` 循环尝试去获得内存。
+可以看到该函数根据分配标识 `__GFP_NOFAIL` 不断地调用 `get_page_from_freelist()` **循环尝试去获得内存**。
 
-接着回到 `__alloc_pages_slowpath()` 中，其从 `__alloc_pages_high_priority()` 退出后继而判断是否设置了 `__GFP_WAIT` 标识，如果设置则表示内存分配运行休眠，否则直接以分配内存失败而退出。接着将会调用 `__alloc_pages_direct_compact()` 和 `__alloc_pages_direct_reclaim()` 尝试回收内存并尝试分配。基于上面的多种尝试内存分配仍然失败的情况，将会调用 `__alloc_pages_may_oom()` 触发OOM killer机制。OOM killer将进程kill后会重新再次尝试内存分配，最后则是分配失败或分配成功的收尾处理。
+接着回到 `__alloc_pages_slowpath()` 中，其从 `__alloc_pages_high_priority()` **退出**后继而判断是否设置了 `__GFP_WAIT` 标识，如果设置则表示**内存分配时可以运行休眠**，否则直接以**分配内存失败而退出**。
+
+接着将会调用 `__alloc_pages_direct_compact()` 和 `__alloc_pages_direct_reclaim()` 尝试**回收内存并尝试分配**。
+
+基于上面的多种尝试**内存分配仍然失败**的情况，将会调用 `__alloc_pages_may_oom()` 触发**OOM killer机制**。OOM killer将**进程kill后会重新再次尝试内存分配**，最后则是分配失败或分配成功的收尾处理。
+
+# 触发OOM killer机制
 
 `__alloc_pages_slowpath()`暂且分析至此，回到本文重点函数`__alloc_pages_may_oom()`中进一步进行分析。
 
 ```cpp
-【file:/ mm/page_alloc.h】
+// mm/page_alloc.h
 static inline struct page *
 __alloc_pages_may_oom(gfp_t gfp_mask, unsigned int order,
 	struct zonelist *zonelist, enum zone_type high_zoneidx,
@@ -311,9 +323,13 @@ out:
 }
 ```
 
-该函数首先通过try_set_zonelist_oom()判断OOM killer是否已经在其他核进行killing操作，如果没有的情况下将会在try_set_zonelist_oom()内部进行锁操作，确保只有一个核执行killing的操作。继而调用get_page_from_freelist()在高watermark的情况下尝试再次获取内存，不过这里注定会失败。接着就是调用到了关键函数out_of_memory()。最后函数退出时将会调用clear_zonelist_oom()清除掉try_set_zonelist_oom()里面的锁操作。
+该函数首先通过 `try_set_zonelist_oom()` 判断OOM killer**是否已经在其他核进行killing操作**，如果**没有**的情况下将会在 `try_set_zonelist_oom()` 内部进行**锁操作**，确保**只有一个核执行killing**的操作。
 
-着重分析一下out_of_memory()：
+继而调用 `get_page_from_freelist()` 在**高watermark**的情况下尝试再次获取内存，不过这里注定会失败。
+
+接着就是调用到了关键函数 `out_of_memory()`。最后函数退出时将会调用`clear_zonelist_oom()`清除掉 `try_set_zonelist_oom()` 里面的**锁操作**。
+
+着重分析一下`out_of_memory()`：
 
 ```cpp
 // mm/oom_kill.c
@@ -396,10 +412,15 @@ out:
 }
 ```
 
-该函数首先调用blocking_notifier_call_chain()进行OOM的内核通知链回调处理；接着的if (fatal_signal_pending(current) || current->flags &
-PF_EXITING)判断则是用于检查是否有SIGKILL信号挂起或者正在信号处理中，如果有则退出；再接着通过constrained_alloc()检查内存分配限制以及check_panic_on_oom()检查是否报linux内核panic；继而判断sysctl_oom_kill_allocating_task变量及进程检查，如果符合条件判断，则将当前分配的内存kill掉；否则最后，将通过select_bad_process()选出最佳的进程，进而调用oom_kill_process()对其进行kill操作。
+该函数首先调用 `blocking_notifier_call_chain()` 进行**OOM的内核通知链回调处理**；
 
-最后分析一下select_bad_process()和oom_kill_process()，其中select_bad_process()的实现：
+接着的 `if (fatal_signal_pending(current) || current->flags & PF_EXITING)` 判断则是用于检查是否有 **SIGKILL 信号挂起**或者**正在信号处理**中，如果有则退出；
+
+再接着通过 `constrained_alloc()` **检查内存分配限制**以及 `check_panic_on_oom()` 检查**是否报linux内核panic**；
+
+继而判断 `sysctl_oom_kill_allocating_task` 变量及进程检查，如果符合条件判断，则**将当前分配的内存kill掉**；否则最后，将通过 `select_bad_process()` **选出最佳的进程**，进而调用 `oom_kill_process()` 对其进行kill操作。
+
+最后分析一下 `select_bad_process()` 和 `oom_kill_process()`，其中`select_bad_process()`的实现：
 
 ```cpp
 // mm/oom_kill.c
