--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/oom killer/1.md
+++ b/Linux/cgroup/memcg/oom killer/1.md
@@ -11,7 +11,7 @@ linux 内存管理中oom killer机制存在于分配内存的`__alloc_pages_slow
 
 相关commit
 
->Memory controller: OOM handling, c7ba5c9e8176704bfac0729875fa62798037584d, 2008-02-07, 08:42
+Memory controller: OOM handling, c7ba5c9e8176704bfac0729875fa62798037584d, 2008-02-07, 08:42
 
 原理
 
@@ -19,7 +19,10 @@ linux 内存管理中oom killer机制存在于分配内存的`__alloc_pages_slow
 
 代码分析
 
->
+在`mem_cgroup_charge()`阶段, 调用了`mem_cgroup_out_of_memory(mem, GFP_KERNEL);`, 
+
+
+
 
 
 
