--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/oom killer/1.md
+++ b/Linux/cgroup/memcg/oom killer/1.md
@@ -19,7 +19,9 @@ Memory controller: OOM handling, c7ba5c9e8176704bfac0729875fa62798037584d, 2008-
 
 代码分析
 
-在`mem_cgroup_charge()`阶段, 调用了`mem_cgroup_out_of_memory(mem, GFP_KERNEL);`, 
+在`mem_cgroup_charge()`阶段, 如果创建了新的 page_cgroup, 当超过cgroup限制的话需要释放它.
+
+调用了`mem_cgroup_out_of_memory(mem, GFP_KERNEL);`, 
 
 
 
