--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/oom killer/1.md
+++ b/Linux/cgroup/memcg/oom killer/1.md
@@ -19,9 +19,57 @@ Memory controller: OOM handling, c7ba5c9e8176704bfac0729875fa62798037584d, 2008-
 
 代码分析
 
-在`mem_cgroup_charge()`阶段, 如果创建了新的 page_cgroup, 当超过cgroup限制的话需要释放它.
+> `mem_cgroup_charge()` 定义在 `mm/memcontrol.c`
+
+```cpp
+int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
+{
+        ......
+        /*
+         * If we created the page_cgroup, we should free it on exceeding
+         * the cgroup limit.
+         */
+        // 创建了新的 page_cgroup, 当超过cgroup限制的话需要释放它
+        while (res_counter_charge(&mem->res, PAGE_SIZE)) {
+                if (try_to_free_mem_cgroup_pages(mem))
+                        continue;
+
+                /*
+                 * try_to_free_mem_cgroup_pages() might not give us a full
+                 * picture of reclaim. Some pages are reclaimed and might be
+                 * moved to swap cache or just unmapped from the cgroup.
+                 * Check the limit again to see if the reclaim reduced the
+                 * current usage of the cgroup before giving up
+                 */
+                if (res_counter_check_under_limit(&mem->res))
+                        continue;
+                        /*
+                         * Since we control both RSS and cache, we end up with a
+                         * very interesting scenario where we end up reclaiming
+                         * memory (essentially RSS), since the memory is pushed
+                         * to swap cache, we eventually end up adding those
+                         * pages back to our list. Hence we give ourselves a
+                         * few chances before we fail
+                         */
+                else if (nr_retries--) {
+                        congestion_wait(WRITE, HZ/10);
+                        continue;
+                }
+
+                css_put(&mem->css);
+                mem_cgroup_out_of_memory(mem, GFP_KERNEL);
+                goto free_pc;
+        }
+        ......
+}
+```
+在`mem_cgroup_charge()`阶段, 
+
+
 
 调用了`mem_cgroup_out_of_memory(mem, GFP_KERNEL);`, 
+
+> `mem_cgroup_out_of_memory()` 定义在 `mm/oom_kill.c`
 
 
 
