--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/oom killer/1.md
+++ b/Linux/cgroup/memcg/oom killer/1.md
@@ -31,6 +31,7 @@ int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
          */
         // 创建了新的 page_cgroup, 当超过cgroup限制的话需要释放它
         while (res_counter_charge(&mem->res, PAGE_SIZE)) {
+                // 释放
                 if (try_to_free_mem_cgroup_pages(mem))
                         continue;
 
@@ -41,6 +42,10 @@ int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
                  * Check the limit again to see if the reclaim reduced the
                  * current usage of the cgroup before giving up
                  */
+                // 可能不会提供完整的回收信息
+                // 一些页面被回收可能仅仅被移至交换缓存或仅从cgroup取消映射
+                // 在放弃之前, 再次检查限制, 查看回收是否减少了cgroup的当前使用率
+                // 
                 if (res_counter_check_under_limit(&mem->res))
                         continue;
                         /*
