--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/oom killer/1.md
+++ b/Linux/cgroup/memcg/oom killer/1.md
@@ -3,7 +3,7 @@
 
 linux 内存管理中oom killer机制存在于分配内存的`__alloc_pages_slowpath()`阶段
 
-所以猜测 memcg的oom kill机制是在`try_charge`(统计)阶段
+所以猜测 memcg的oom kill机制是在`try_charge`(统计计数)阶段
 
 # 查看最初的代码
 
