--- a/Linux/cgroup/memcg/oom killer/1.md
+++ b/Linux/cgroup/memcg/oom killer/1.md
@@ -15,6 +15,10 @@ Memory controller: OOM handling, c7ba5c9e8176704bfac0729875fa62798037584d, 2008-
 
 原理
 
+> 整个统计和限制的实现过程可简单描述为：
+>
+>某进程在需要统计的地方调用mem_cgroup_charge()来进行必要的结构体设置（增加计数等），判断增加计数后进程所在的cgroup的内存使用是否超过限制，如果超过了，则触发reclaim机制进行内存回收，如果回收后依然超过限制，则触发oom或阻塞机制等待；如果增加计数后没有超过限制，则更新相应page对应的page_cgroup，完成统计计数的修改，并将相应的page放到对应的LRU中进行管理。
+
 >oom(Out of memory)处理用于当cgroup超过其限制. 从超过限制的cgroup中拿到一个进程, 利用现有的oom逻辑kill掉这个进程.
 
 代码分析
@@ -31,7 +35,7 @@ int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
          */
         // 创建了新的 page_cgroup, 当超过cgroup限制的话需要释放它
         while (res_counter_charge(&mem->res, PAGE_SIZE)) {
-                // 释放
+                // 回收释放
                 if (try_to_free_mem_cgroup_pages(mem))
                         continue;
 
@@ -42,7 +46,7 @@ int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
                  * Check the limit again to see if the reclaim reduced the
                  * current usage of the cgroup before giving up
                  */
-                // 可能不会提供完整的回收信息
+                // 上面调用可能不会提供完整的回收信息
                 // 一些页面被回收可能仅仅被移至交换缓存或仅从cgroup取消映射
                 // 在放弃之前, 再次检查限制, 查看回收是否减少了cgroup的当前使用率
                 // 
@@ -68,6 +72,7 @@ int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
         ......
 }
 ```
+
 在`mem_cgroup_charge()`阶段, 
 
 
