--- a/Linux/cgroup/memcg/oom killer/1.md
+++ b/Linux/cgroup/memcg/oom killer/1.md
@@ -1,4 +1,11 @@
 
+# 基本知识
+
+> 整个统计和限制的实现过程可简单描述为：
+>某进程在需要统计的地方调用mem_cgroup_charge()来进行必要的结构体设置（增加计数等），判断增加计数后进程所在的cgroup的内存使用是否超过限制，如果超过了，则触发reclaim机制进行内存回收，如果回收后依然超过限制，则触发oom或阻塞机制等待；如果增加计数后没有超过限制，则更新相应page对应的page_cgroup，完成统计计数的修改，并将相应的page放到对应的LRU中进行管理。
+
+>Oom的全称是out-of-memory，是内核在处理系统内存不足而又回收无果的情况下采取的一种措施，内核会经过选择杀死一些进程，以释放一些内存，满足当前内存申请的需求。所以oom是一种系统行为，对应到memcg的oom，其原理和动机跟全局oom是一样的，区别只在于对象的不同，全局oom的对象是整个系统中所有进程，而memcg oom只针对memcg中的进程（如果使能了hierarchy，还包括所有子memcg中的进程），这里的对象主要是指oom时内核选择从哪些进程中杀死一些进程，所以memcg的oom只可能杀死属于该memcg的进程。
+
 # 猜测
 
 linux 内存管理中oom killer机制存在于分配内存的`__alloc_pages_slowpath()`阶段
@@ -9,23 +16,14 @@ linux 内存管理中oom killer机制存在于分配内存的`__alloc_pages_slow
 
 通过`tig mm/memcontrol.c`查看最开始代码, 能得到oom最初的代码
 
-相关commit
+## 相关commit
 
 Memory controller: OOM handling, c7ba5c9e8176704bfac0729875fa62798037584d, 2008-02-07, 08:42
 
-原理
-
-> 整个统计和限制的实现过程可简单描述为：
->
->某进程在需要统计的地方调用mem_cgroup_charge()来进行必要的结构体设置（增加计数等），判断增加计数后进程所在的cgroup的内存使用是否超过限制，如果超过了，则触发reclaim机制进行内存回收，如果回收后依然超过限制，则触发oom或阻塞机制等待；如果增加计数后没有超过限制，则更新相应page对应的page_cgroup，完成统计计数的修改，并将相应的page放到对应的LRU中进行管理。
-
->oom(Out of memory)处理用于当cgroup超过其限制. 从超过限制的cgroup中拿到一个进程, 利用现有的oom逻辑kill掉这个进程.
-
-代码分析
-
-> `mem_cgroup_charge()` 定义在 `mm/memcontrol.c`
+## 代码分析
 
 ```cpp
+// mm/memcontrol.c
 int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
 {
         ......
@@ -73,7 +71,7 @@ int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
 }
 ```
 
-在`mem_cgroup_charge()`阶段, 
+在`mem_cgroup_charge()`阶段, 进行增加计数
 
 
 
