--- a/Linux/cgroup/memcg/oom killer/1.md
+++ b/Linux/cgroup/memcg/oom killer/1.md
@@ -6,6 +6,14 @@
 
 >Oom的全称是out-of-memory，是内核在处理系统内存不足而又回收无果的情况下采取的一种措施，内核会经过选择杀死一些进程，以释放一些内存，满足当前内存申请的需求。所以oom是一种系统行为，对应到memcg的oom，其原理和动机跟全局oom是一样的，区别只在于对象的不同，全局oom的对象是整个系统中所有进程，而memcg oom只针对memcg中的进程（如果使能了hierarchy，还包括所有子memcg中的进程），这里的对象主要是指oom时内核选择从哪些进程中杀死一些进程，所以memcg的oom只可能杀死属于该memcg的进程。
 
+对于charge(统计)功能的实现:
+
+a. 统计针对每一个cgroup进行；
+
+b. 每个cgroup中的进程，它的mm_struct知道自己属于哪个cgroup；
+
+c. 每个page对应一个page_cgroup，而page_cgroup知道自己属于哪个memcg；
+
 # 猜测
 
 linux 内存管理中oom killer机制存在于分配内存的`__alloc_pages_slowpath()`阶段
@@ -31,7 +39,8 @@ int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
          * If we created the page_cgroup, we should free it on exceeding
          * the cgroup limit.
          */
-        // 创建了新的 page_cgroup, 当超过cgroup限制的话需要释放它
+        // 下面逻辑都是创建了新的 page_cgroup, 即
+        // 当超过cgroup限制的话需要释放它
         while (res_counter_charge(&mem->res, PAGE_SIZE)) {
                 // 回收释放
                 if (try_to_free_mem_cgroup_pages(mem))
