--- a/Linux/cgroup/memcg/oom killer/1.md
+++ b/Linux/cgroup/memcg/oom killer/1.md
@@ -40,9 +40,10 @@ int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
          * the cgroup limit.
          */
         // 下面逻辑都是创建了新的 page_cgroup, 即
-        // 当超过cgroup限制的话需要释放它
+        // 当前memcg使用的内存统计计数 + PAGE_SIZE
+        // 如果大于这个memcg的limit, 则进入里面的流程
         while (res_counter_charge(&mem->res, PAGE_SIZE)) {
-                // 回收释放
+                // 回收释放这个memcg的page, 释放成功返回1(即进行下一次循环)
                 if (try_to_free_mem_cgroup_pages(mem))
                         continue;
 
@@ -56,7 +57,7 @@ int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
                 // 上面调用可能不会提供完整的回收信息
                 // 一些页面被回收可能仅仅被移至交换缓存或仅从cgroup取消映射
                 // 在放弃之前, 再次检查限制, 查看回收是否减少了cgroup的当前使用率
-                // 
+                // 在limit内返回true(下一次循环), 否则false(高于limit)
                 if (res_counter_check_under_limit(&mem->res))
                         continue;
                         /*
@@ -67,6 +68,7 @@ int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
                          * pages back to our list. Hence we give ourselves a
                          * few chances before we fail
                          */
+                //
                 else if (nr_retries--) {
                         congestion_wait(WRITE, HZ/10);
                         continue;
