--- a/Linux/cgroup/memcg/oom killer/1.md
+++ b/Linux/cgroup/memcg/oom killer/1.md
@@ -105,6 +105,8 @@ retry:
                 p = current;
         // 杀掉选中的进程及与其共用mm的进程
         // 杀进程的目的是释放内存，所以当然要把mm的所有引用都干掉
+        // 里面的实现会优先kill子进程
+        // 不成功, 则重试
         if (oom_kill_process(p, gfp_mask, 0, points,
                                 "Memory cgroup out of memory"))
                 goto retry;
@@ -115,7 +117,65 @@ out:
 #endif
 ```
 
-这里`select_bad_process()`利用了原本的选择函数
+这里`select_bad_process()`利用了原本的选择函数, 只不过多加了个参数
+
+```diff
+--- a/mm/oom_kill.c
++++ b/mm/oom_kill.c
+@@ -25,6 +25,7 @@
+ #include <linux/cpuset.h>
+ #include <linux/module.h>
+ #include <linux/notifier.h>
++#include <linux/memcontrol.h>
+
+ int sysctl_panic_on_oom;
+ int sysctl_oom_kill_allocating_task;
+@@ -50,7 +51,8 @@ static DEFINE_SPINLOCK(zone_scan_mutex);
+  *    of least surprise ... (be careful when you change it)
+  */
+
+-unsigned long badness(struct task_struct *p, unsigned long uptime)
++unsigned long badness(struct task_struct *p, unsigned long uptime,
++                       struct mem_cgroup *mem)
+ {
+        unsigned long points, cpu_time, run_time, s;
+        struct mm_struct *mm;
+@@ -63,6 +65,13 @@ unsigned long badness(struct task_struct *p, unsigned long uptime)
+                return 0;
+        }
+        // 关键部分
++#ifdef CONFIG_CGROUP_MEM_CONT
+        // 在memcg情况下, 如果mm的memcg不是当前这个, 则不处理, 返回
++       if (mem != NULL && mm->mem_cgroup != mem) {
++               task_unlock(p);
++               return 0;
++       }
++#endif
++
+        /*
+         * The memory size of the process is the basis for the badness.
+         */
+@@ -193,7 +202,8 @@ static inline enum oom_constraint constrained_alloc(struct zonelist *zonelist,
+  *
+  * (not docbooked, we don't want this one cluttering up the manual)
+  */
+-static struct task_struct *select_bad_process(unsigned long *ppoints)
++static struct task_struct *select_bad_process(unsigned long *ppoints,
++                                               struct mem_cgroup *mem)
+ {
+        struct task_struct *g, *p;
+        struct task_struct *chosen = NULL;
+@@ -247,7 +257,7 @@ static struct task_struct *select_bad_process(unsigned long *ppoints)
+                if (p->oomkilladj == OOM_DISABLE)
+                        continue;
+
+-               points = badness(p, uptime.tv_sec);
++               points = badness(p, uptime.tv_sec, mem);
+                if (points > *ppoints || !chosen) {
+                        chosen = p;
+                        *ppoints = points;
+```
+
 
 
 
