--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -1,10 +1,11 @@
 
-# 基本知识
+# OOM
+
+Oom的全称是out-of-memory，是内核在处理系统内存不足而又回收无果的情况下采取的一种措施，内核会经过选择杀死一些进程，以释放一些内存，满足当前内存申请的需求。所以oom是一种系统行为，对应到memcg的oom，其原理和动机跟全局oom是一样的，区别只在于对象的不同，全局oom的对象是整个系统中所有进程，而memcg oom只针对memcg中的进程（如果使能了hierarchy，还包括所有子memcg中的进程），这里的对象主要是指oom时内核选择从哪些进程中杀死一些进程，所以memcg的oom只可能杀死属于该memcg的进程。
 
 > 整个统计和限制的实现过程可简单描述为：
 >某进程在需要统计的地方调用mem_cgroup_charge()来进行必要的结构体设置（增加计数等），判断增加计数后进程所在的cgroup的内存使用是否超过限制，如果超过了，则触发reclaim机制进行内存回收，如果回收后依然超过限制，则触发oom或阻塞机制等待；如果增加计数后没有超过限制，则更新相应page对应的page_cgroup，完成统计计数的修改，并将相应的page放到对应的LRU中进行管理。
 
->Oom的全称是out-of-memory，是内核在处理系统内存不足而又回收无果的情况下采取的一种措施，内核会经过选择杀死一些进程，以释放一些内存，满足当前内存申请的需求。所以oom是一种系统行为，对应到memcg的oom，其原理和动机跟全局oom是一样的，区别只在于对象的不同，全局oom的对象是整个系统中所有进程，而memcg oom只针对memcg中的进程（如果使能了hierarchy，还包括所有子memcg中的进程），这里的对象主要是指oom时内核选择从哪些进程中杀死一些进程，所以memcg的oom只可能杀死属于该memcg的进程。
 
 >对于charge(统计)功能的实现:
 >a. 统计针对每一个cgroup进行；
@@ -180,10 +181,61 @@ out:
 
 # 最新的方案
 
+基于:
+
+```
+VERSION = 5
+PATCHLEVEL = 11
+SUBLEVEL = 0
+EXTRAVERSION = -rc4
+```
+
+```cpp
+static int try_charge(struct mem_cgroup *memcg, gfp_t gfp_mask,
+                      unsigned int nr_pages)
+{
+        ......
+        /*
+         * keep retrying as long as the memcg oom killer is able to make
+         * a forward progress or bypass the charge if the oom killer
+         * couldn't make any progress.
+         */
+        oom_status = mem_cgroup_oom(mem_over_limit, gfp_mask,
+                       get_order(nr_pages * PAGE_SIZE));
+        switch (oom_status) {
+        case OOM_SUCCESS:
+                nr_retries = MAX_RECLAIM_RETRIES;
+                goto retry;
+        case OOM_FAILED:
+                goto force;
+        default:
+                goto nomem;
+        }
+nomem:
+        if (!(gfp_mask & __GFP_NOFAIL))
+                return -ENOMEM;
+force:
+        /*
+         * The allocation either can't fail or will lead to more memory
+         * being freed very soon.  Allow memory usage go over the limit
+         * temporarily by force charging it.
+         */
+        page_counter_charge(&memcg->memory, nr_pages);
+        if (do_memsw_account())
+                page_counter_charge(&memcg->memsw, nr_pages);
+
+        return 0;
+        ......
+```
 
 
 
 
+
+
+
+
+# 
 
 通过`struct mem_cgroup`中oom相关的结构体变量以及`mm/memcontrol.c`中相关变量(`memcg_oom_mutex`等), 查找最初的memcg oom killer代码
 
