--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -1,34 +1,27 @@
 
-# OOM
+# 1. OOM
 
-Oom的全称是out-of-memory，是内核在处理系统内存不足而又回收无果的情况下采取的一种措施，内核会经过选择杀死一些进程，以释放一些内存，满足当前内存申请的需求。所以oom是一种系统行为，对应到memcg的oom，其原理和动机跟全局oom是一样的，区别只在于对象的不同，全局oom的对象是整个系统中所有进程，而memcg oom只针对memcg中的进程（如果使能了hierarchy，还包括所有子memcg中的进程），这里的对象主要是指oom时内核选择从哪些进程中杀死一些进程，所以memcg的oom只可能杀死属于该memcg的进程。
+Oom的全称是out-of-memory，是内核在处理系统内存不足而又回收无果的情况下采取的一种措施，内核会经过选择杀死一些进程，以释放一些内存，满足当前内存申请的需求。
 
-> 整个统计和限制的实现过程可简单描述为：
->某进程在需要统计的地方调用mem_cgroup_charge()来进行必要的结构体设置（增加计数等），判断增加计数后进程所在的cgroup的内存使用是否超过限制，如果超过了，则触发reclaim机制进行内存回收，如果回收后依然超过限制，则触发oom或阻塞机制等待；如果增加计数后没有超过限制，则更新相应page对应的page_cgroup，完成统计计数的修改，并将相应的page放到对应的LRU中进行管理。
+所以oom是一种系统行为，对应到memcg的oom，其原理和动机跟全局oom是一样的，区别只在于对象的不同，全局oom的对象是整个系统中所有进程，而memcg oom只针对memcg中的进程（如果使能了hierarchy，还包括所有子memcg中的进程），这里的对象主要是指oom时内核选择从哪些进程中杀死一些进程，所以memcg的oom**只**可能杀死**属于该memcg的进程**。
 
-
->对于charge(统计)功能的实现:
->a. 统计针对每一个cgroup进行；
->b. 每个cgroup中的进程，它的mm_struct知道自己属于哪个cgroup；
->c. 每个page对应一个page_cgroup，而page_cgroup知道自己属于哪个memcg；
-
-# 猜测
+# 2. 猜测
 
 linux 内存管理中oom killer机制存在于分配内存的`__alloc_pages_slowpath()`阶段
 
-所以猜测 memcg的oom kill机制是在`try_charge`(统计计数)阶段
+所以猜测 memcg的oom kill机制是在`charge`(统计计数)阶段
 
-# 查看最初的代码
+# 3. 查看最初的代码
 
 通过`tig mm/memcontrol.c`查看最开始代码, 能得到oom最初的代码
 
-## 相关commit
+## 3.1. 相关commit
 
 Memory controller: OOM handling, c7ba5c9e8176704bfac0729875fa62798037584d, 2008-02-07, 08:42
 
 >oom(Out of memory)处理用于当cgroup超过其限制. 从超过限制的cgroup中拿到一个进程, 利用现有的oom逻辑kill掉这个进程.
 
-## 代码分析
+## 3.2. 代码分析
 
 ```cpp
 // mm/memcontrol.c
@@ -118,7 +111,9 @@ out:
 #endif
 ```
 
-这里`select_bad_process()`利用了原本的选择函数, 只不过多加了个参数
+跟全局oom一样，memcg的oom也分成`select_bad_process`和`oom_kill_process`两个过程, 而这两个都直接使用了内核的函数.
+
+这里`select_bad_process()`只不过多加了个参数, 用来兼容memcg.
 
 ```diff
 --- a/mm/oom_kill.c
@@ -179,16 +174,9 @@ out:
 
 至此第一版的memcg oom killer代码分析结束.
 
-# 最新的方案
+# 4. 最新的方案
 
-基于:
 
-```
-VERSION = 5
-PATCHLEVEL = 11
-SUBLEVEL = 0
-EXTRAVERSION = -rc4
-```
 
 ```cpp
 static int try_charge(struct mem_cgroup *memcg, gfp_t gfp_mask,
@@ -235,7 +223,7 @@ force:
 
 
 
-# 
+# 5. 
 
 通过`struct mem_cgroup`中oom相关的结构体变量以及`mm/memcontrol.c`中相关变量(`memcg_oom_mutex`等), 查找最初的memcg oom killer代码
 
