--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -23,6 +23,20 @@ Memory controller: OOM handling, c7ba5c9e8176704bfac0729875fa62798037584d, 2008-
 
 ## 3.2. 代码分析
 
+```diff
+--- a/mm/memcontrol.c
++++ b/mm/memcontrol.c
+@@ -329,6 +329,7 @@ int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
+                }
+
+                css_put(&mem->css);
++               mem_cgroup_out_of_memory(mem, GFP_KERNEL);
+                goto free_pc;
+        }
+```
+
+reset回这个commit查看.
+
 ```cpp
 // mm/memcontrol.c
 int mem_cgroup_charge(struct page *page, struct mm_struct *mm)
@@ -177,6 +191,18 @@ out:
 # 4. 最新的方案
 
 
+基于:
+
+```
+VERSION = 5
+PATCHLEVEL = 11
+SUBLEVEL = 0
+EXTRAVERSION = -rc4
+```
+
+
+
+
 
 ```cpp
 static int try_charge(struct mem_cgroup *memcg, gfp_t gfp_mask,
@@ -188,13 +214,17 @@ static int try_charge(struct mem_cgroup *memcg, gfp_t gfp_mask,
          * a forward progress or bypass the charge if the oom killer
          * couldn't make any progress.
          */
+        // 只要memcg oom Killer能够取得前进，就可以持续重试
+        // 如果oom killer无法取得任何进展, 则绕开charge.
         oom_status = mem_cgroup_oom(mem_over_limit, gfp_mask,
                        get_order(nr_pages * PAGE_SIZE));
         switch (oom_status) {
         case OOM_SUCCESS:
+                // oom成功, 持续重试
                 nr_retries = MAX_RECLAIM_RETRIES;
                 goto retry;
         case OOM_FAILED:
+                // oom失败
                 goto force;
         default:
                 goto nomem;
