--- Auto-Git Commit ---

--- a/Linux/cgroup/memcg/2. oom killer.md
+++ b/Linux/cgroup/memcg/2. oom killer.md
@@ -345,6 +345,7 @@ struct mem_cgroup {
 
 
 
+
 最终代码:
 * arch: mm: remove obsolete init OOM protection, 94bce453c78996cc4373d5da6cfabe07fcc6d9f9
 * arch: mm: do not invoke OOM killer on kernel fault OOM, 871341023c771ad233620b7a1fb3d9c7031c4e5c
@@ -382,4 +383,27 @@ improve memcg oom killer robustness (提升memcg oom killer的健壮性)
 
 
 
+
+# memcg priority oom killer
+
+https://github.com/alibaba/cloud-kernel/commit/52e375fcb7a71d62566dc89764ce107e2f6af9ee#diff-8fa1dddd53606ceb933c5c6a12e714ed41e11d37a2b7bc48e91d15b54171d033
+
+
+```diff
+@@ -252,6 +255,12 @@ struct mem_cgroup {
+	bool		oom_lock;
+	int		under_oom;
+
+	/* memcg priority */
+	bool use_priority_oom;
+	int priority;
+	int num_oom_skip;
+	struct mem_cgroup *next_reset;
+
+	int	swappiness;
+```
+
+
+
+root_mem_cgroup->use_priority_oom
 
